fixed logo visibility

--- a/src/styles/homepage/index.scss
+++ b/src/styles/homepage/index.scss
@@ -1,17 +1,18 @@
 @import "../global";
+@import "../variables";
 
 main {
   &.full {
     position: absolute;
-    width: calc(100% - $page-margin*2);
-    height: calc(100% - $page-margin*2);
+    width: calc(100% - #{$page-margin}*2);
+    height: calc(100% - #{$page-margin}*2);
     margin: 0;
     top: $page-margin;
     left: $page-margin;
 
     header {
       position: absolute;
-      width: calc(100% - $page-margin*2);
+      width: calc(100% - #{$page-margin}*2);
       z-index: 2;
       margin: $page-margin;
     }
