--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,12 +1,13 @@
 @import "global";
+@import "variables";
 
 header {
-  width: calc(100% - $page-margin*2);
+  width: calc(100% - #{$page-margin}*2);
   margin: $page-margin;
 }
 
 main {
-  width: calc(100% - $page-margin*2);
+  width: calc(100% - #{$page-margin}*2);
   margin: $page-margin;
   min-height: 500px;
 }
