--- a/src/styles/layouts/mobile-menu.scss
+++ b/src/styles/layouts/mobile-menu.scss
@@ -12,7 +12,7 @@
     width: 40px;
     cursor: pointer;
     position: absolute;
-    right: -20px;
+    right: 0;
     z-index: 4;
   }
 
